--- a/D11_Symfony/biblios/templates/base.html.twig
+++ b/D11_Symfony/biblios/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Biblios {% block title %}{% endblock %}</title>
+        <title>Biblios </title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         {% block stylesheets %}
         {% endblock %}
@@ -24,6 +24,9 @@
                 </div>
             </div>
         </nav>
+        <div class="container py-5">
+        </div>
+        {% block title %}{% endblock %}
         {% block body %}{% endblock %}
         <footer class="py-5 bg-dark">
             <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Biblios</p></div>
